# dealership-intel

./: .env.example  .gitignore  Dockerfile  README.md  api.py  app.py  cloudbuild.yaml  docker-compose.yml  pyproject.toml  run_autotrader_scrape.py
.streamlit/: config.toml
config/: platforms.py  settings.py
crawlers/: autotrader_scraper.py  browser.py  contact_extractor.py  inventory_crawler.py  platform_detector.py  review_crawler.py  social_crawler.py  staff_crawler.py  stealth.py
pages/: 1_Process.py  2_Results.py  3_Search.py  4_Settings.py  5_Autotrader.py  6_Enrich.py
pipeline/: autotrader_pipeline.py  enrichment_pipeline.py  fallback_chain.py  intel_pipeline.py
services/: apollo_api.py  crm_sync.py  database_schema.py  database_service.py  domain_utils.py  email_verification.py  google_sheets.py  role_classifier.py  validation.py  web_scraper.py
tests/: conftest.py  test_autotrader_scraper.py  test_contact_extractor.py  test_crm_sync.py  test_platform_detector.py  test_provider_templates.py  test_role_classifier.py  test_stealth.py  test_validation.py
